--- a/kinect2/package.xml
+++ b/kinect2/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0"?>
 <package>
-  <name>iai_kinect2</name>
+  <name>kinect2</name>
   <version>0.0.1</version>
   <description>
-    The iai_kinect2 metapackage
+    The kinect2 metapackage
   </description>
 
   <maintainer email="wiedemeyer@informatik.uni-bremen.de">Thiemo Wiedemeyer</maintainer>
