Accept symlinks in workspace

--- a/kinect2_bridge/CMakeLists.txt
+++ b/kinect2_bridge/CMakeLists.txt
@@ -51,12 +51,13 @@ catkin_package(
 ###########
 
 # Display additional files in qtcreator
-execute_process(COMMAND find ${PROJECT_SOURCE_DIR} -type f OUTPUT_VARIABLE FILES_STRING)
+execute_process(COMMAND find -L ${PROJECT_SOURCE_DIR} -type f OUTPUT_VARIABLE FILES_STRING)
 string(REPLACE "\n" ";" FILES_LIST ${FILES_STRING})
+get_filename_component(REAL_PROJECT_SOURCE_DIR ${PROJECT_SOURCE_DIR} REALPATH)
 add_custom_target(additional_files_${PROJECT_NAME}
   SOURCES
   ${FILES_LIST}
-  ${PROJECT_SOURCE_DIR}/../README.md
+  ${REAL_PROJECT_SOURCE_DIR}/../README.md
 )
 
 include_directories(include
